--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
     <script src="./lib/phaser.min.js"></script>
+    <script src="./src/prefabs/Player.js"></script>
+    <script src="./src/prefabs/Enemy.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="./src/scenes/GameOver.js"></script>
